--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
+    "vue-barcode": "^1.2.0",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
+    "vue-print-nb": "^1.0.3",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
